# Flower_app

./: .claudeignore  .gitignore  DEVELOPMENT.md  README.md  TASK.md  TASKS.md  pupu.css  pyproject.toml  pyrightconfig.json
alembic/: env.py
app/: main.py
backend/: .env  CLAUDE.md  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 027ba4909d08_create_refresh_token_table.py  0afa0078220c_add_image_id_fk_to_category_and_advice.py  1a91e4220608_image_library_m2m.py  1b2f02fb3899_add_flower_and_flower_image.py  1c1ad97aac86_add_image.py  27a28e81ca59_add_cartitem_table_args.py  27bd76c8910d_add_payment_fields_to_order.py  281c3ac3d0d5_add_sort_order_to_product.py  3b01e7d74ac0_add_banner_description.py  3eea613dce32_add_category.py  4630456bfa2d_add_link_to_advice.py  49d3ab7c5a08_add_role_enum.py  4c4ed2c6db7f_add_link_to_banner.py  525d0da0862b_add_product_fields_flower_banner.py  82bf6b9dafdf_add_order_and_order_item.py  b454b869702d_add_defaults_for_flower_timestamps.py  d8e7db8d5268_add_default_cart.py  e431a9fdffed_add_pickup_points.py  ea622af5101a_change_email_to_phone.py  f3abec54d0b4_rename_flower_to_product.py  ff5f73bb2058_fix_phone_length.py
backend/app/: main.py
backend/app/api/v1/: advices_router.py  auth_router.py  banners_router.py  carts_router.py  categories_router.py  discounts_router.py  favourites_router.py  flowers_router.py  images_router.py  orders_router.py  pickups_router.py  products_router.py  users_router.py
backend/app/core/: config.py  deps.py  exceptions.py  handlers.py  limiter.py  logger.py  logging_middleware.py  redis.py  security.py  security_headers_middleware.py  utils.py
backend/app/database/: session.py
backend/app/db/: session.py
backend/app/models/: advices_model.py  auth_model.py  banners_model.py  carts_model.py  categories_model.py  discounts_model.py  favourites_model.py  image_model.py  images_model.py  orders_model.py  pickups_model.py  products_model.py  users_model.py
backend/app/modules/auth/: model.py  repository.py  router.py  schema.py  service.py  utils.py
backend/app/modules/carts/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/categories/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/discounts/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/favourites/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/flowers/: filter.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/orders/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/payments/: service.py
backend/app/modules/pickup_points/: model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/products/: filter.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/modules/users/: model.py  repository.py  router.py  schema.py  service.py
backend/app/repository/: advices_repository.py  auth_repository.py  banners_repository.py  carts_repository.py  categories_repository.py  discounts_repository.py  favourites_repository.py  flowers_repository.py  image_repository.py  images_repository.py  orders_repository.py  pickups_repository.py  products_repository.py  users_repository.py
backend/app/schemas/: advices_schema.py  auth_schema.py  banners_schema.py  carts_schema.py  categories_schema.py  favourites_schema.py  flowers_schema.py  image_schema.py  orders_schema.py  pickups_schema.py  products_schema.py  users_schema.py
backend/app/service/: advices_service.py  auth_service.py  banners_service.py  carts_service.py  categories_service.py  discounts_service.py  favourites_service.py  flowers_service.py  image_service.py  images_service.py  orders_service.py  payments_service.py  pickups_service.py  products_service.py  users_service.py
backend/app/utils/: cookie.py
backend/app/utils/filters/: products.py
backend/app/utils/validators/: image.py  link.py  password.py  phone.py  slug.py
bot/: __main__.py  pyproject.toml  pyrightconfig.json
bot/app/: __main__.py
bot/app/core/: config.py  redis.py
bot/app/handlers/: __init__.py  common.py  handler.py  registration.py  reset_password.py  start.py
bot/app/keyboards/: phone.py
bot/app/service/: registration.py
bot/app/states/: registration.py
bot/app/storage/: redis.py
bot/handlers/: handler.py
docker/: docker-compose.yaml
frontend/: CLAUDE.md  components.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
(+136 files in other folders)
