[project]
name = "flowershop-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.24.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.12.0",
  "redis>=7.1.0",
]


[tool.ruff]
target-version = "py313"
fix = true
line-length = 140
exclude = ["migrations", "*.html", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PERF", "FIX002", "PLE", "PLW", "F822", "N", "S", "RUF", "ASYNC"]
allowed-confusables = ["а", "е", "о", "р", "с", "у", "х", "і", "г"]
ignore = ["E501", "D104", "D100", "B008"]
exclude = [".git", "__pycache__", "venv", ".venv"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
